syntax = "proto3";
package filewatcher_model;
option go_package = "./;filewatcher_model";

message NotifyAccessReq {
  string path = 1;
}

message NotifyAccessResp {}

message NotifyReadReq {
  string path = 1;
}

message NotifyReadResp {}

message ReadFileReq {
  string path = 1;
}

message ReadFileResp {
  bytes data = 1;
  string error = 2;
  bool error_is_not_exist = 3;
  uint64 mode = 5;
}

message Dirent {
  bool is_dir = 1;
  string name = 2;
}

message ReadDirReq {
  string path = 1;
}

message ReadDirResp {
  repeated Dirent entries = 1;
  string error = 2;
  bool error_is_not_exist = 3;
  bool error_is_not_dir = 4;
  uint64 mode = 5;
}

message StatReq {
  string path = 1;
}

service FuseFS {
  rpc NotifyAccess(NotifyAccessReq) returns (NotifyAccessResp) {}
  rpc NotifyRead(NotifyReadReq) returns (NotifyReadResp) {}
  rpc ReadFile(ReadFileReq) returns (stream ReadFileResp) {}
  rpc ReadDir(ReadDirReq) returns (ReadDirResp) {}
}