syntax = "proto3";
package vm_protocol_model;
option go_package = "./;vm_protocol_model";

message ReconnectReq {
  string ping = 1;
}

message ReconnectResp {
  string ping = 1;
}

message AllowReadsReq {
}

message AllowReadsResp {
}

message SyncReq {}

message SyncResp {}

message CopyReq {
  string host_source = 1;
}

message CopyResp {
  string error = 1;
}

message ExposeWebsiteReq {
  string expose_website_line = 1;
}

message ExposeWebsiteResp {
  string host = 1;
}

service VMProtocolClient { //in the VM
  rpc Reconnect(ReconnectReq) returns (ReconnectResp) {}
  rpc AllowReads(AllowReadsReq) returns (AllowReadsResp) {}
  rpc Sync(SyncReq) returns (SyncResp) {}
  rpc Copy(CopyReq) returns (CopyResp) {}
  rpc ExposeWebsite(ExposeWebsiteReq) returns (ExposeWebsiteResp) {}
}